# CoursTALN-ManuscritsAnciens

./: Guide.md  MEM-01-TALN_Glossaire.md  README.md  Syllabus_Général.md
Exercices/: TP-01-TALN-Architecture-Tansformer.py  TP-02-TALN_Ingestion-Data-Contract.py  TP-03-04-TALN_Normalisation-LoRA-QLoRA.py  TP-05-06-TALN.ipynb  TP-05-06-TALN_Pipeline-NER.py  TP-07-08-TALN.ipynb  TP-07-08-TALN_Connaissances.py  TR-04-TALN_Normalisation.py
Ressources/: CONVENTIONS_NLP.md  exemple_bnf_fr768_f042r.json
Stanza/: README.md  pyproject.toml  setup_stanza_medieval.zsh  stanza_medieval_colab.ipynb
Stanza/fine-tuning/: README.md  stanza_medieval_colab_catmus.ipynb  stanza_medieval_colab_toy.ipynb
Stanza/fine-tuning/pos_finetuning_data/: fro_custom-ud-dev.conllu  fro_custom-ud-test.conllu  fro_custom-ud-train.conllu
Stanza/taln/: README.md  morph_features.md  stanza_medieval_demo.py
Supports/: LEC-00-TALN_Généralités.md  LEC-01-TALN_Architecture-Transformer.md  LEC-02-TALN_Ingestion-Data-Contract.md  LEC-03-TALN_PEFT-LoRA-QLoRA.md  LEC-04-TALN_Normalisation-LoRA.md  LEC-05-TALN_Segmentation-POS-NER.md  LEC-06-TALN_Pipeline-NER.md  LEC-07-TALN_Texte-Connaissance.md  LEC-08-TALN_Base-Connaissance.md  LEC-09-TALN_Production.md  LEC-10-TALN_Optimisation-Packaging.md  LEC-11-TALN_Traduction-FR-Ancien.md
Transparents/: PRE-01-TALN_Architecture-Transformer.key  PRE-02-TALN_Ingestion-Data-Contract.key  PRE-03-TALN_PEFT-LoRA-QLoRA.key  PRE-04-Normalisation-LoRA.key  PRE-04-TALN_Normalisation-LoRA.key  PRE-05-TALN_Segmentation-POS-NER.key  PRE-06-TALN_Pipeline-NER.key  (+2 more)
