[project]
name = "stanza-medieval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "datasets>=5.0.0",
    "huggingface-hub>=1.19.0",
    "stanza>=1.12.2",
    "torch>=2.12.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
